Cleanup code commit done.

--- a/TEKHealthAPI/src/main/resources/application.properties
+++ b/TEKHealthAPI/src/main/resources/application.properties
@@ -4,3 +4,13 @@ spring.data.mongodb.username=admin
 spring.data.mongodb.password=manage
 spring.data.mongodb.database=tekhealth
 server.port=8081
+
+app.sf.token.url=https://teksystemshealthcare.my.salesforce.com/services/oauth2/token?grant_type=password&client_id=3MVG9YDQS5WtC11qc1AI9.6dtMUtSKMiDu7IC7E4zcjtL.OziW599N056Cbd6uyBHX0MylXzNQLdYo3AKZc3H&client_secret=6796271916356064713&username=teksystemshealthcare@gmail.com&password=Abcd1234
+app.sf.token.username=teksystemshealthcare@gmail.com
+app.sf.token.pwd=Abcd1234
+
+app.sf.patient.url=https://teksystemshealthcare.my.salesforce.com/services/apexrest/TekSystems_PatientIdByMRN
+app.sf.devicedata.url=https://teksystemshealthcare.my.salesforce.com/services/apexrest/TekSystems_pushDeviceData
+app.c8y.url=https://teksystemspoc.cumulocity.com/measurement/measurements?fragmentType=c8y_HealthMonitoring&source=
+app.c8y.username=skadhira@teksystems.com
+app.c8y.pwd=Tek@123
