--- a/AHStore/pom.xml
+++ b/AHStore/pom.xml
@@ -31,7 +31,7 @@
 		    <artifactId>spring-data-oracle</artifactId>
 		    <version>1.0.0.RELEASE</version>
 		</dependency> -->
-		<dependency>
+	<dependency>
 	        <groupId>com.oracle</groupId>
 	        <artifactId>ojdbc6</artifactId>
 	        <version>11.2.0.3</version>
@@ -156,6 +156,14 @@
 		     <scope>system</scope>
 		    <systemPath>${basedir}/src/main/resources/lib/nPlugin.jar</systemPath> 
 		</dependency>
+                <!--WM IS Client Jar-->
+                <dependency>
+		    <groupId>com.wm</groupId>
+		    <artifactId>wm-isclient</artifactId>
+		    <version>9.9</version>
+		     <scope>system</scope>
+		    <systemPath>${basedir}/src/main/resources/lib/wm-isclient.jar</systemPath> 
+		</dependency>
 		<dependency>
 			<groupId>com.fasterxml.jackson.core</groupId>
 			<artifactId>jackson-databind</artifactId>
@@ -184,7 +192,7 @@
 
 	<build>
 		<plugins>        
-            <plugin>
+                        <plugin>
 			  <groupId>org.springframework.boot</groupId>
 			  <artifactId>spring-boot-maven-plugin</artifactId>
 			  <configuration>
